--- a/CS/BlazorDashboardApp/Client/wwwroot/index.html
+++ b/CS/BlazorDashboardApp/Client/wwwroot/index.html
@@ -8,6 +8,9 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="_content/DevExpress.Blazor.Dashboard/ace.css" rel="stylesheet" />
+    <link href="_content/DevExpress.Blazor.Dashboard/ace-theme-dreamweaver.css" rel="stylesheet" />
+    <link href="_content/DevExpress.Blazor.Dashboard/ace-theme-ambiance.css" rel="stylesheet" />
     <link href="BlazorDashboardApp.Client.styles.css" rel="stylesheet" />
     <link href="_content/DevExpress.Blazor.Dashboard/dx.light.css" rel="stylesheet" />
     <link href="_content/DevExpress.Blazor.Dashboard/dx-analytics.common.css" rel="stylesheet" />
